# taskstodo

./: .gitignore  LICENSE  README.md  calcurse.py  pyproject.toml  tasklists.py  tasks-todo.py  tasks.py  taskstodo.py
taskstodo/: calcurse.py  tasklists.py  tasks.py  taskstodo.py
taskstodo/test/: test_calcurse.py  test_tasklists.py  test_tasks.py
tests/: test_calcurse.py  test_task.py  test_tasklist.py  test_tasklists.py  test_tasks.py
